--- a/project.html
+++ b/project.html
@@ -7,9 +7,15 @@
 		  <link href="style.css" rel="stylesheet" type="text/css"1/>
 	  </head>
 	  <body>
-		  <div class="header">Header</div>
+		  <div class="header">
+		    <img src="https://pmcdeadline2.files.wordpress.com/2016/07/logo-tv-logo.png" alt= "Logo" width="70"></div>
 		  <div class="content-wrapper">
-		     <div class="sidebar-left">Sidebar Left</div>
+		     <div class="sidebar-left">
+		       <nav>
+		             <a href="#"> Meniu 1 </a>
+			     <a href="#"> Meniu 2 </a>
+		             <a href="#"> Meniu 3 </a>
+		            </nav></div>
 		     <div class="content-main">Main Content</div>
 		     <div class="sidebar-right">Sidebar Right</div>
 		     </div>
