--- a/project.html
+++ b/project.html
@@ -8,19 +8,26 @@
 	  </head>
 	  <body>
 		  <div class="header">
-		    <img src="https://pmcdeadline2.files.wordpress.com/2016/07/logo-tv-logo.png" alt= "Logo" width="70"></div>
+		    <img src="https://pmcdeadline2.files.wordpress.com/2016/07/logo-tv-logo.png" alt= "Logo" width="70"> Header </div>
 		  <div class="content-wrapper">
-		     <div class="sidebar-left">
-		       <nav>
-		             <a href="#"> Meniu 1 </a>
-			     <a href="#"> Meniu 2 </a>
-		             <a href="#"> Meniu 3 </a>
-		            </nav></div>
-		     <div class="content-main">Main Content</div>
-		     <div class="sidebar-right">Sidebar Right</div>
-		     </div>
-                  <div class="footer">Footer</div>
-
+			  <div class="sidebar-left"> Menu </div>
+		     	  <div class="content-main">Important zone</div>
+		  
+		  </div> 
+		 <div class="kozep">
+			 <div class="contact"><p style="writing-mode: sideways-lr"> Contact Info </p></div>
+			 <div class="bead"> Beadcrumb </div>
+			 <div class="content"> 
+				 <div class="kozepcontent"> Content </div>
+				 <div class="egyebb"> Second Content </div>
+                 
+			 </div>	 </div>	 
+		 <div class="footer">
+			 <div class="One"> Footer1</div>
+			 <div class="Two"> Footer2</div>
+			 <div class="Three"> Footer3</div>
+			 <div class="Four"> Footer4</div>
+		 </div>
 
 	  </body>
   </html>
